--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,23 @@ android {
             }
         }
     }
+    
+    signingConfigs {
+        release {
+            storeFile rootProject.file('release.keystore')
+            storePassword System.getenv('KEYSTORE_PASSWORD')
+            keyAlias System.getenv('KEY_ALIAS')
+            keyPassword System.getenv('KEY_PASSWORD')
+        }
+    }
 
     buildTypes {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-project.txt'
+            if (rootProject.file('release.keystore').exists()) {
+                signingConfig signingConfigs.release
+            }
         }
     }
     externalNativeBuild {
